// Vitest Snapshot v1

exports[`Page > should render correctly 1`] = `
"<div class=\\"mx-page\\">
  <div class=\\"mx-page__head\\">
    <!---->
  </div>
  <div class=\\"mx-page__body\\" style=\\"height: 0px; padding-top: 0;\\">
    <!---->
  </div>
  <div class=\\"mx-page__foot\\">
    <!---->
  </div>
</div>"
`;

exports[`Page > should render fixed correctly 1`] = `
"<div class=\\"mx-page\\">
  <div class=\\"mx-page__head mx-page__head--fixed\\">
    <!---->
  </div>
  <div class=\\"mx-page__body\\" style=\\"height: 0px; padding-top: 0px;\\">
    <!---->
  </div>
  <div class=\\"mx-page__foot\\">
    <!---->
  </div>
</div>"
`;
